Fix vulnerability in Dockerfile